--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -11,15 +11,17 @@
 
 <body>
   <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-evenly align-center p-2">
+    <header class="display-flex justify-space-between align-center p-2">
       <h1>
         <a href="/">Tech Blog</a>
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
+        <a href="/home">Home</a>
+         |
+        <a href="/dashboard">Dashboard</a>
+        <button class="no-button" id="logout">Logout</button>
         {{else}}
         <a href="/login">login</a>
         {{/if}}
@@ -38,6 +40,48 @@
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
+</body>
+
+</html> --}}
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tech Blog</title>
+  {{!-- <link rel="stylesheet" href="/stylesheets/style.css"> --}}
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
+</head>
+
+<body>
+  <div class="jumbotron">
+      <header class="hero">
+          <h1 class="app-title"><i class="fab "></i>Tech Blog</h1>
+          <div>
+            <nav class="nav">
+                    <a class="link" href="/">Home |</a>
+                    <a class="link" href="/dashboard">| Dashboard |</a>
+                    {{#if loggedIn}}
+                    <a class="link" href="/" id="logout">| Logout</a>
+                    {{else}}
+                    <a class="link" href="/login">| Login</a>
+                    {{/if}}
+                </nav>          
+          </div>
+      </header>
+
+    <main>
+      {{{ body }}}
+    </main>
+  </div>
+
+    {{#if loggedIn}}
+    <script src="/javascript/logout.js"></script>
+    {{/if}}
+
 </body>
 
 </html>
