--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,87 +1,38 @@
-{{!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tech Blog</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-
-<body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <a href="/">Tech Blog</a>
-      </h1>
-      <nav>
-        <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/home">Home</a>
-         |
-        <a href="/dashboard">Dashboard</a>
-        <button class="no-button" id="logout">Logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
-      </nav>
-    </header>
-    <main class="container container-fluid mt-5">
-      <!-- Render the sub layout -->
-      {{{ body }}}
-    </main>
-    <footer>
-      
-    </footer>
-  </div>
-
-  <!-- Render script for logged in users only -->
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
-</body>
-
-</html> --}}
-
-
 <!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tech Blog</title>
-  {{!-- <link rel="stylesheet" href="/stylesheets/style.css"> --}}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
-</head>
+  <html lang="en">
 
-<body>
-  <div class="jumbotron">
-      <header class="hero">
-          <h1 class="app-title"><i class="fab "></i>Tech Blog</h1>
-          <div>
-            <nav class="nav">
-                    <a class="link" href="/">Home |</a>
-                    <a class="link" href="/dashboard">| Dashboard |</a>
-                    {{#if loggedIn}}
-                    <a class="link" href="/" id="logout">| Logout</a>
-                    {{else}}
-                    <a class="link" href="/login">| Login</a>
-                    {{/if}}
-                </nav>          
-          </div>
+    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Tech Blog</title>
+      <link rel="stylesheet" href="/stylesheets/style.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
+    </head>
+
+    <body>
+      <header class="jumbotron">
+          <h1>Tech Blog</h1>
+              <nav>
+                      <a class="navbar-brand" href="/">Home</a>
+                      <a class="navbar-brand" href="/dashboard">Dashboard</a>
+                      {{#if loggedIn}}
+                      <a class="navbar-brand" href="/" id="logout">Logout</a>
+                      {{else}}
+                      <a class="navbar-brand" href="/login">Login</a>
+                      {{/if}}
+              </nav>          
       </header>
 
-    <main>
-      {{{ body }}}
-    </main>
-  </div>
+      <main>
+        {{{ body }}}
+      </main>
+      
 
-    {{#if loggedIn}}
-    <script src="/javascript/logout.js"></script>
-    {{/if}}
+      {{#if loggedIn}}
+      <script src="/javascript/logout.js"></script>
+      {{/if}}
 
-</body>
+    </body>
 
-</html>
+  </html>
