--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,3 +1,4 @@
+{{#if logged_in}}
 <div class="card">
   <div class="card-header">
     {{post_title}}
@@ -9,5 +10,5 @@
     </blockquote>
   </div>
 </div>
-
 <br/>
+{{/if}}
