--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
 <div class="row">
+  {{!-- Log In Form --}}
   <div class="col-md-6">
     <h2>Login</h2>
-
-    <form class="form login-form">
+    <form class="form" id="login-form">
       <div class="form-group">
         <label for="email-login">email:</label>
         <input class="form-input" type="text" id="email-login" />
@@ -16,9 +16,10 @@
       </div>
     </form>
   </div>
+
+  {{!-- Sign Up Form --}}
   <div class="col-md-6">
     <h2>Signup</h2>
-
     <form class="form signup-form">
       <div class="form-group">
         <label for="name-signup">name:</label>
