logout functionality working

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,8 +29,8 @@
       </main>
       
 
-      {{#if loggedIn}}
-      <script src="/javascript/logout.js"></script>
+      {{#if logged_in}}
+      <script src="./js/logout.js"></script>
       {{/if}}
 
     </body>
